--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -62,3 +62,44 @@
     align-items: center;
   }
 }
+
+@media screen and (max-width: 650px) {
+  .text h2 {
+    font-size: 60px;
+  }
+
+  .text p {
+    font-size: 30px;
+  }
+
+  .link a {
+    font-size: 24px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .text h2 {
+    font-size: 50px;
+  }
+
+  .text p {
+    font-size: 25px;
+  }
+
+  .link a {
+    font-size: 15px;
+  }
+
+  .link img {
+    width: 10%;
+  }
+}
+
+@media screen and (max-width: 378px) {
+  .text p {
+    font-size: 20px;
+  }
+
+  .link a {
+    font-size: 12px;
+  }
+}
